tests/fixtures/invalid/round_bool_bytes.py
# Cannot call round() with Bool, Bytes
x = round(True, b"hello")
